k8s/micro-sistema-nota-api/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sistema-notas
