k8s/micro-sistema-nota-api/mysql-statefulset-microk8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sistema-notas
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: sistema-notas
  labels: { app: mysql }
spec:
  type: ClusterIP
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
  selector: { app: mysql }
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
  namespace: sistema-notas
  labels: { app: mysql }
spec:
  clusterIP: None
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
  selector: { app: mysql }
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: sistema-notas
spec:
  serviceName: mysql-headless
  replicas: 1
  selector:
    matchLabels: { app: mysql }
  template:
    metadata:
      labels: { app: mysql }
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: mysql
              containerPort: 3306
          args: ["--default-authentication-plugin=mysql_native_password"]
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
            - name: mycnf
              mountPath: /etc/mysql/conf.d
          readinessProbe:
            exec:
              command: ["bash","-lc","mysqladmin ping -uroot -p$MYSQL_ROOT_PASSWORD"]
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["bash","-lc","mysqladmin ping -uroot -p$MYSQL_ROOT_PASSWORD"]
            initialDelaySeconds: 40
            periodSeconds: 10
          resources:
            requests: { cpu: "250m", memory: "512Mi" }
            limits:   { cpu: "1000m", memory: "2Gi" }
      volumes:
        - name: mycnf
          configMap:
            name: mysql-config
            items: [{ key: my.cnf, path: my.cnf }]
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: microk8s-hostpath
        resources:
          requests: { storage: 10Gi }

#kubectl apply -f mysql-infra-only.yaml
#kubectl -n sistema-notas get pods,pvc,svc
#kubectl -n sistema-notas logs statefulset/mysql
